wip waiting for contaienr release

--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -8,17 +8,17 @@
     "# Deploy Mixtral 8x7B on AWS Inferentia2 with Hugging Face Optimum\n",
     "\n",
     "\n",
-    "[Llama 3](https://huggingface.co/meta-llama/Meta-Llama-3-70B-Instruct) is the latest iteration of the open-access Llama family. Llama 3 comes in two sizes: 8B for efficient deployment and development on consumer-size GPU, and 70B for large-scale AI native applications. Both come in base and instruction-tuned variants. In addition to the 4 models, a new version of Llama Guard was fine-tuned on Llama 3 8B and is released as Llama Guard 2 (safety fine-tune).\n",
+    "[Mixtral 8x7B](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) is the open LLM from [Mistral AI](https://huggingface.co/mistralai). The Mixtral-8x7B is a Sparse Mixture of Experts it has a similar architecture to Mistral 7B, but comes with a twist: it’s actually 8 “expert” models in one. If you want to learn more about MoEs check out [Mixture of Experts Explained](https://huggingface.co/blog/moe).\n",
     "\n",
-    "In this blog you will learn how to deploy [/meta-llama/Meta-Llama-3-70B-Instruct](https://huggingface.co/meta-llama/Meta-Llama-3-70B-Instruct) model on AWS Inferentia2 with Hugging Face Optimum on Amazon SageMaker. We are going to use the Hugging Face LLM Inf2 Container a new purpose-built Inference Container to easily deploy LLMs on AWS Inferentia2 powered by[ Text Generation Inference](https://huggingface.co/docs/text-generation-inference/index) and [Optimum Neuron](https://huggingface.co/docs/optimum-neuron/index).\n",
+    "In this blog you will learn how to deploy [mistralai/Mixtral-8x7B-Instruct-v0.1](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) model on AWS Inferentia2 with Hugging Face Optimum on Amazon SageMaker. We are going to use the Hugging Face LLM Inf2 Container a new purpose-built Inference Container to easily deploy LLMs on AWS Inferentia2 powered by[ Text Generation Inference](https://huggingface.co/docs/text-generation-inference/index) and [Optimum Neuron](https://huggingface.co/docs/optimum-neuron/index).\n",
     "\n",
     "\n",
     "In the blog will cover how to:\n",
     "1. [Setup development environment](#1-setup-development-environment)\n",
     "2. [Retrieve the new Hugging Face LLM Inf2 DLC](#2-retrieve-the-new-hugging-face-llm-inf2-dlc)\n",
-    "3. [Deploy Llama 3 70B to inferentia2](#3-deploy-llama-3-70b-to-inferentia2)\n",
+    "3. [Deploy Mixtral 8x7B to inferentia2](#3-deploy-mixtral-8x7b-to-inferentia2)\n",
     "4. [Run inference and chat with the model](#4-run-inference-and-chat-with-the-model)\n",
-    "5. [Benchmark llama 3 70B with llmperf on AWS Inferentia2](#5-benchmark-llama-3-70b-with-llmperf-on-aws-inferentia2)\n",
+    "5. [Benchmark Mixtral 8x7B with llmperf on AWS Inferentia2](#5-benchmark-mixtral-8x7b-with-llmperf-on-aws-inferentia2)\n",
     "6. [Clean up](#6-clean-up)\n",
     "\n",
     "Lets get started! 🚀\n",
@@ -110,18 +110,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Comment in when released\n",
-    "# from sagemaker.huggingface import get_huggingface_llm_image_uri\n",
+    "from sagemaker.huggingface import get_huggingface_llm_image_uri\n",
     "\n",
-    "# # retrieve the llm image uri\n",
-    "# llm_image = get_huggingface_llm_image_uri(\n",
-    "#   \"huggingface-neuronx\",\n",
-    "#   version=\"0.0.22\"\n",
-    "# )\n",
+    "# retrieve the llm image uri\n",
+    "llm_image = get_huggingface_llm_image_uri(\n",
+    "  \"huggingface-neuronx\",\n",
+    "  version=\"0.0.23\"\n",
+    ")\n",
     "\n",
-    "# # print ecr image uri\n",
-    "# print(f\"llm image uri: {llm_image}\")\n",
-    "llm_image = \"558105141721.dkr.ecr.us-east-1.amazonaws.com/optimum-neuron-preview:tgi-llama3\""
+    "# print ecr image uri\n",
+    "print(f\"llm image uri: {llm_image}\")"
    ]
   },
   {
@@ -129,16 +127,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Deploy Llama 3 70B to inferentia2\n",
+    "## 3. Deploy Mixtral 8x7B to inferentia2\n",
     "\n",
     "At the time of writing, [AWS Inferentia2 does not support dynamic shapes for inference](https://awsdocs-neuron.readthedocs-hosted.com/en/v2.6.0/general/arch/neuron-features/dynamic-shapes.html#neuron-dynamic-shapes), which means that we need to specify our sequence length and batch size ahead of time.\n",
-    "To make it easier for customers to utilize the full power of Inferentia2, we created a [neuron model cache](https://huggingface.co/docs/optimum-neuron/guides/cache_system), which contains pre-compiled configurations for the most popular LLMs, including Llama 3 70B. \n",
     "\n",
-    "This means we don't need to compile the model ourselves, but we can use the pre-compiled model from the cache. You can find compiled/cached configurations on the [Hugging Face Hub](https://huggingface.co/aws-neuron/optimum-neuron-cache/tree/main/inference-cache-config). If your desired configuration is not yet cached, you can compile it yourself using the [Optimum CLI](https://huggingface.co/docs/optimum-neuron/cli/compile) or open a request at the [Cache repository](https://huggingface.co/aws-neuron/optimum-neuron-cache/discussions)\n",
+    "Below is an example on how to compile Mixtral 8x7B with Optimum CLI, thats not needed in this case as we pre-compiled the model [aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23](https://huggingface.co/aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23) with a batch size of 4 and a sequence length of 4096.\n",
     "\n",
-    "Below is an example on how to compile Llama 3 70B with Optimum CLI, thats not needed in this case as we are using the pre-compiled model from the cache.\n",
-    "\n",
-    "**Example: Compile Llama 3 70B with Optimum CLI**\n",
+    "**Example: Compile Mixtral 8x7B with Optimum CLI**\n",
     "\n",
     "```bash\n",
     "# login into the huggingface hub to access gated models, like llama\n",
@@ -146,14 +141,12 @@
     "# compile model with optimum for batch size 4 and sequence length 2048\n",
     "optimum-cli export neuron -m mistralai/Mixtral-8x7B-Instruct-v0.1 --batch_size 4 --sequence_length 4096 --num_cores 24 --auto_cast_type fp16 ./mixtral-instruct-neuron\n",
     "# push model to hub [repo_id] [local_path] [path_in_repo]\n",
-    "huggingface-cli upload  aws-neuron/mixtral-instruct-seqlen-4096-bs-8 ./mixtral-instruct-neuron ./ --exclude \"checkpoint/**\"\n",
-    "# Move tokenizer to neuron model repository\n",
-    "python -c \"from transformers import AutoTokenizer; AutoTokenizer.from_pretrained('mistralai/Mixtral-8x7B-Instruct-v0.1').push_to_hub('aws-neuron/mixtral-instruct-seqlen-4096-bs-8')\"\n",
+    "huggingface-cli upload  aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23 ./mixtral-instruct-neuron ./ --exclude \"checkpoint/**\"\n",
     "```\n",
     "\n",
     "_Note: You need to compile models on an AWS EC2 instance with Inferentia2 support. Compilation can take up to 45 minutes._\n",
     "\n",
-    "**Deploying Llama 3 70B as Endpoint**  \n",
+    "**Deploying Mixtral 8x7B as Endpoint**  \n",
     "\n",
     "Before deploying the model to Amazon SageMaker, we must define the TGI Neuronx endpoint configuration. We need to make sure the following additional parameters are defined: \n",
     "\n",
@@ -172,16 +165,7 @@
     "\n",
     "**Select the right instance type**\n",
     "\n",
-    "Llama 3 70B is a large model and requires a lot of memory. We are going to use the `inf2.48xlarge` instance type, which has 192 vCPUs and 384 GB of accelerator memory. The `inf2.48xlarge` instance comes with 12 Inferentia2 accelerators that include 24 Neuron Cores. If you want to find the cached configurations for Llama 3 70B, you can find them [here](https://huggingface.co/aws-neuron/optimum-neuron-cache/blob/6392789bb1f2ab2af2867f0ab564058b781054ca/inference-cache-config/llama.json#L102). In our case we will use a batch size of 4 and a sequence length of 4096. \n",
-    "\n",
-    "\n",
-    "Before we can deploy Llama 3 70B to Inferentia2, we need to make sure we are logged in to the Hugging Face Hub and have the necessary permissions to access the model. You can request access to the model [here](https://huggingface.co/meta-llama/Llama-2-70b-chat-hf).\n",
-    "\n",
-    "```bash\n",
-    "huggingface-cli login --token [API_TOKEN]\n",
-    "```\n",
-    "\n",
-    "After that we can create our endpoint configuration and deploy the model to Amazon SageMaker."
+    "Mixtral 8x7B is a large model and requires a lot of memory. We are going to use the `inf2.48xlarge` instance type, which has 192 vCPUs and 384 GB of accelerator memory. The `inf2.48xlarge` instance comes with 12 Inferentia2 accelerators that include 24 Neuron Cores. "
    ]
   },
   {
@@ -200,7 +184,7 @@
     "\n",
     "# Define Model and Endpoint configuration parameter\n",
     "config = {\n",
-    "    \"HF_MODEL_ID\": \"meta-llama/Meta-Llama-3-70B-Instruct\",\n",
+    "    \"HF_MODEL_ID\": \"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\", # replace with your model id if you are using your own model\n",
     "    \"HF_NUM_CORES\": \"24\", # number of neuron cores\n",
     "    \"HF_BATCH_SIZE\": \"4\", # batch size used to compile the model\n",
     "    \"HF_SEQUENCE_LENGTH\": \"4096\", # length used to compile the model\n",
@@ -288,11 +272,11 @@
     "\n",
     "# Generation arguments\n",
     "parameters = {\n",
-    "    \"model\": \"meta-llama/Meta-Llama-3-70B-Instruct\", # placholder, needed\n",
+    "    \"model\": \"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\", # placholder, needed\n",
     "    \"top_p\": 0.6,\n",
     "    \"temperature\": 0.9,\n",
     "    \"max_tokens\": 512,\n",
-    "    \"stop\": [\"<|eot_id|>\"],\n",
+    "    # \"stop\": [\"</s>\"],\n",
     "}"
    ]
   },
@@ -332,14 +316,13 @@
     "# add apps directory to path ../apps/\n",
     "import sys\n",
     "sys.path.append(\"../demo\") \n",
-    "from sagemaker_chat import create_gradio_app\n",
+    "from llama3_chat import create_gradio_app\n",
     "\n",
     "# create gradio app\n",
     "create_gradio_app(\n",
     "    llm.endpoint_name,           # Sagemaker endpoint name\n",
     "    session=sess.boto_session,   # boto3 session used to send request \n",
-    "    system_prompt=\"You are an helpful Assistant, called Llama 3. Knowing everyting about AWS.\",\n",
-    "    tokenizer=tokenizer,         # Tokenizer to use format prompt\n",
+    "    system_prompt=\"You are an helpful Assistant, called Mixtral. Knowing everyting about AWS.\",\n",
     "    concurrency_count=4,         # Number of concurrent requests\n",
     "    share=True,                  # Share app publicly\n",
     ")"
@@ -356,9 +339,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Benchmark llama 3 70B with llmperf on AWS Inferentia2\n",
+    "## 5. Benchmark Mixtral 8x7B with llmperf on AWS Inferentia2\n",
     "\n",
-    "We successfully deployed Llama 3 70B to Amazon SageMaker and tested it. Now we want to benchmark the model to see how it performs. We will use a [llmperf](https://github.com/philschmid/llmperf) fork with support for `sagemaker`.\n",
+    "We successfully deployed Mixtral 8x7B to Amazon SageMaker and tested it. Now we want to benchmark the model to see how it performs. We will use a [llmperf](https://github.com/philschmid/llmperf) fork with support for `sagemaker`.\n",
     "\n",
     "First lets install the `llmperf` package.\n"
    ]
@@ -432,12 +415,12 @@
    "source": [
     "Results with 250 token generation: \n",
     "```bash\n",
-    "Llama 3 70B results on inf2.48xlarge:\n",
+    "Mixtral 8x7B results on inf2.48xlarge:\n",
     "Throughput: 42.23 tokens/s\n",
     "Latency p(50): 88.80 ms/token\n",
     "```\n",
     "\n",
-    "Thats it! We successfully deployed, tested and benchmarked Llama 3 70B on AWS Inferentia2. The benchmark is not a full representation of the model performance, but it gives you a first good indication. If you plan to use the model in production, we recommend to run a longer and closer to your production benchmark, modify the number of replicas see ([Scale LLM Inference on Amazon SageMaker with Multi-Replica Endpoints](https://www.philschmid.de/sagemaker-multi-replicahttps://www.philschmid.de/sagemaker-multi-replica)) and most importantly test the model with your own data."
+    "Thats it! We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. The benchmark is not a full representation of the model performance, but it gives you a first good indication. If you plan to use the model in production, we recommend to run a longer and closer to your production benchmark, modify the number of replicas see ([Scale LLM Inference on Amazon SageMaker with Multi-Replica Endpoints](https://www.philschmid.de/sagemaker-multi-replicahttps://www.philschmid.de/sagemaker-multi-replica)) and most importantly test the model with your own data."
    ]
   },
   {
@@ -477,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
