--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -8,9 +8,9 @@
     "# Deploy Mixtral 8x7B on AWS Inferentia2 with Hugging Face Optimum\n",
     "\n",
     "\n",
-    "[Mixtral 8x7B](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) is the open LLM from [Mistral AI](https://huggingface.co/mistralai). The Mixtral-8x7B is a Sparse Mixture of Experts it has a similar architecture to Mistral 7B, but comes with a twist: it’s actually 8 “expert” models in one. If you want to learn more about MoEs check out [Mixture of Experts Explained](https://huggingface.co/blog/moe).\n",
+    "[Mixtral 8x7B](https://huggingface.co/NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO) is the open LLM from [Mistral AI](https://huggingface.co/mistralai). The Mixtral-8x7B is a Sparse Mixture of Experts it has a similar architecture to Mistral 7B, but comes with a twist: it’s actually 8 “expert” models in one. If you want to learn more about MoEs check out [Mixture of Experts Explained](https://huggingface.co/blog/moe).\n",
     "\n",
-    "In this blog you will learn how to deploy [mistralai/Mixtral-8x7B-Instruct-v0.1](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) model on AWS Inferentia2 with Hugging Face Optimum on Amazon SageMaker. We are going to use the Hugging Face LLM Inf2 Container a new purpose-built Inference Container to easily deploy LLMs on AWS Inferentia2 powered by[ Text Generation Inference](https://huggingface.co/docs/text-generation-inference/index) and [Optimum Neuron](https://huggingface.co/docs/optimum-neuron/index).\n",
+    "In this blog you will learn how to deploy [NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO](https://huggingface.co/NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO) model on AWS Inferentia2 with Hugging Face Optimum on Amazon SageMaker. We are going to use the Hugging Face LLM Inf2 Container a new purpose-built Inference Container to easily deploy LLMs on AWS Inferentia2 powered by[ Text Generation Inference](https://huggingface.co/docs/text-generation-inference/index) and [Optimum Neuron](https://huggingface.co/docs/optimum-neuron/index).\n",
     "\n",
     "\n",
     "In the blog will cover how to:\n",
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"sagemaker>=2.199.0\" gradio transformers --upgrade --quiet"
+    "!pip install \"sagemaker>=2.223.0\" gradio transformers --upgrade --quiet"
    ]
   },
   {
@@ -133,35 +133,52 @@
     "\n",
     "Below is an example on how to compile Mixtral 8x7B with Optimum CLI, thats not needed in this case as we pre-compiled the model [aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23](https://huggingface.co/aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23) with a batch size of 4 and a sequence length of 4096.\n",
     "\n",
+    "\n",
     "**Example: Compile Mixtral 8x7B with Optimum CLI**\n",
     "\n",
-    "```bash\n",
-    "# login into the huggingface hub to access gated models, like llama\n",
-    "huggingface-cli login --token [API_TOKEN]\n",
-    "# compile model with optimum for batch size 4 and sequence length 2048\n",
-    "optimum-cli export neuron -m mistralai/Mixtral-8x7B-Instruct-v0.1 --batch_size 4 --sequence_length 4096 --num_cores 24 --auto_cast_type fp16 ./mixtral-instruct-neuron\n",
-    "# push model to hub [repo_id] [local_path] [path_in_repo]\n",
-    "huggingface-cli upload  aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23 ./mixtral-instruct-neuron ./ --exclude \"checkpoint/**\"\n",
-    "```\n",
     "\n",
-    "_Note: You need to compile models on an AWS EC2 instance with Inferentia2 support. Compilation can take up to 45 minutes._\n",
+    "_Note: You need to compile models on an AWS EC2 instance with Inferentia2 support. Compilation can take up to 45 minutes if there is no cached configuration available._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_ID = \"NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO\"\n",
+    "SEQUENCE_LENGTH = 4096\n",
+    "BATCH_SIZE = 4\n",
+    "NUM_CORES = 24 # each inferentia chip has 2 cores, e.g. inf2.48xlarge has 12 chips or 24 cores\n",
+    "PRECISION = \"fp16\"\n",
+    "HF_MODEL_ID_TO_PUSH=\"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\" # change this to your desired model id\n",
+    "# HF_TOKEN = \"REPLACE_WITH_YOUR_HF_TOKEN\"\n",
+    "\n",
+    "# login into the huggingface hub to access gated models, like llama\n",
+    "# !huggingface-cli login --token $HF_TOKEN\n",
+    "# compile model with optimum for batch size 4 and sequence length 2048\n",
+    "!optimum-cli export neuron -m {MODEL_ID} --batch_size {BATCH_SIZE} --sequence_length {SEQUENCE_LENGTH} --num_cores {NUM_CORES} --auto_cast_type {PRECISION} ./mixtral-instruct-neuron\n",
+    "# push model to hub [repo_id] [local_path] [path_in_repo]\n",
+    "!huggingface-cli upload {HF_MODEL_ID_TO_PUSH} ./mixtral-instruct-neuron ./ --exclude \"checkpoint/**\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_Note: We only compile and push the architecture and not the weights. Those will still be loaded from the original repository (NousResearch/Nous-Hermes-2-Mixtral-8x7B-DPO). If you also want to push the weights remove ` --exclude \"checkpoint/**\"` from the `upload` command. This has been avoided to speed up things._\n",
     "\n",
     "**Deploying Mixtral 8x7B as Endpoint**  \n",
     "\n",
     "Before deploying the model to Amazon SageMaker, we must define the TGI Neuronx endpoint configuration. We need to make sure the following additional parameters are defined: \n",
     "\n",
+    "- `HF_MODEL_ID`: The Hugging Face model ID or path to where model is stored, e.g. `/opt/ml/model`.\n",
     "- `HF_NUM_CORES`: Number of Neuron Cores used for the compilation.\n",
-    "- `HF_BATCH_SIZE`: The batch size that was used to compile the model.\n",
-    "- `HF_SEQUENCE_LENGTH`: The sequence length that was used to compile the model.\n",
-    "- `HF_AUTO_CAST_TYPE`: The auto cast type that was used to compile the model.\n",
-    "\n",
-    "We still need to define traditional TGI parameters with:\n",
-    "\n",
-    "- `HF_MODEL_ID`: The Hugging Face model ID.\n",
-    "- `HF_TOKEN`: The Hugging Face API token to access gated models.\n",
     "- `MAX_BATCH_SIZE`: The maximum batch size that the model can handle, equal to the batch size used for compilation.\n",
-    "- `MAX_INPUT_LENGTH`: The maximum input length that the model can handle. \n",
+    "- `MAX_INPUT_LENGTH`: The maximum input length that the model can handle, equal to the sequence length used for compilation.\n",
     "- `MAX_TOTAL_TOKENS`: The maximum total tokens the model can generate, equal to the sequence length used for compilation.\n",
+    "- `HF_AUTO_CAST_TYPE`: The auto cast type that was used to compile the model.\n",
+    "- `HF_TOKEN`: The Hugging Face API token to access gated models, optional if the model is public.\n",
     "\n",
     "**Select the right instance type**\n",
     "\n",
@@ -170,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,14 +203,12 @@
     "config = {\n",
     "    \"HF_MODEL_ID\": \"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\", # replace with your model id if you are using your own model\n",
     "    \"HF_NUM_CORES\": \"24\", # number of neuron cores\n",
-    "    \"HF_BATCH_SIZE\": \"4\", # batch size used to compile the model\n",
-    "    \"HF_SEQUENCE_LENGTH\": \"4096\", # length used to compile the model\n",
     "    \"HF_AUTO_CAST_TYPE\": \"fp16\",  # dtype of the model\n",
     "    \"MAX_BATCH_SIZE\": \"4\", # max batch size for the model\n",
     "    \"MAX_INPUT_LENGTH\": \"4000\", # max length of input text\n",
     "    \"MAX_TOTAL_TOKENS\": \"4096\", # max length of generated text\n",
     "    \"MESSAGES_API_ENABLED\": \"true\", # Enable the messages API\n",
-    "    \"HF_TOKEN\": HfFolder.get_token(), # pass the huggingface token\n",
+    "    \"HF_TOKEN\": HfFolder.get_token(), # pass the huggingface token to access the base weights\n",
     "}\n",
     "\n",
     "\n",
@@ -215,12 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------------------------------------------------------------!"
+     ]
+    }
+   ],
    "source": [
     "# Deploy model to an endpoint\n",
     "# https://sagemaker.readthedocs.io/en/stable/api/inference/model.html#sagemaker.model.Model.deploy\n",
+    "llm_model._is_compiled_model = True # We precompiled the model\n",
+    "\n",
     "llm = llm_model.deploy(\n",
     "  initial_instance_count=1,\n",
     "  instance_type=instance_type,\n",
@@ -260,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,9 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deep learning is a type of machine learning, which is a way for computers to learn things without being specifically programmed to do so. In deep learning, the computer learns by analyzing a lot of data and finding patterns in it. It does this using artificial neural networks, which are modeled after the way that the human brain works. These neural networks have many layers, which is why it's called \"deep\" learning.\n",
+      "\n",
+      "To understand deep learning, imagine you're trying to teach a computer to recognize pictures of cats. You would start by showing it lots and lots of pictures, some of cats and some of other things. The computer would look at the pictures and try to find patterns that can help it distinguish cats from other things. For example, it might learn that cats have pointy ears and whiskers, or that they often have a certain shape.\n",
+      "\n",
+      "As the computer analyzes more and more pictures, it gets better and better at recognizing cats. This is because it's learning from experience, just like a human would. And just like a human, the more experience it has, the better it gets.\n",
+      "\n",
+      "Deep learning is used in many different applications, including image and speech recognition, natural language processing, and self-driving cars. It's a powerful tool that's helping us build smarter, more intelligent machines.</s>\n"
+     ]
+    }
+   ],
    "source": [
     "chat = llm.predict({\"messages\" :messages, **parameters})\n",
     "\n",
@@ -435,13 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "llm.delete_model()\n",
     "llm.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
