--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"sagemaker>=2.223.0\" gradio transformers --upgrade --quiet"
+    "!pip install \"sagemaker>=2.223.0\" \"gradio<4\" transformers --upgrade --quiet"
    ]
   },
   {
@@ -151,15 +151,15 @@
     "BATCH_SIZE = 4\n",
     "NUM_CORES = 24 # each inferentia chip has 2 cores, e.g. inf2.48xlarge has 12 chips or 24 cores\n",
     "PRECISION = \"fp16\"\n",
-    "HF_MODEL_ID_TO_PUSH=\"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\" # change this to your desired model id\n",
-    "# HF_TOKEN = \"REPLACE_WITH_YOUR_HF_TOKEN\"\n",
+    "HF_MODEL_ID_TO_PUSH=\"aws-neuron/hermes-mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\" # change this to your desired model id\n",
+    "HF_TOKEN = \"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\"\n",
     "\n",
     "# login into the huggingface hub to access gated models, like llama\n",
-    "# !huggingface-cli login --token $HF_TOKEN\n",
+    "!huggingface-cli login --token $HF_TOKEN\n",
     "# compile model with optimum for batch size 4 and sequence length 2048\n",
     "!optimum-cli export neuron -m {MODEL_ID} --batch_size {BATCH_SIZE} --sequence_length {SEQUENCE_LENGTH} --num_cores {NUM_CORES} --auto_cast_type {PRECISION} ./mixtral-instruct-neuron\n",
     "# push model to hub [repo_id] [local_path] [path_in_repo]\n",
-    "!huggingface-cli upload {HF_MODEL_ID_TO_PUSH} ./mixtral-instruct-neuron ./ --exclude \"checkpoint/**\""
+    "!huggingface-cli upload {HF_MODEL_ID_TO_PUSH} ./mixtral-instruct-neuron ./"
    ]
   },
   {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +201,14 @@
     "\n",
     "# Define Model and Endpoint configuration parameter\n",
     "config = {\n",
-    "    \"HF_MODEL_ID\": \"aws-neuron/mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\", # replace with your model id if you are using your own model\n",
+    "    \"HF_MODEL_ID\": \"aws-neuron/hermes-mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\", # replace with your model id if you are using your own model\n",
     "    \"HF_NUM_CORES\": \"24\", # number of neuron cores\n",
     "    \"HF_AUTO_CAST_TYPE\": \"fp16\",  # dtype of the model\n",
     "    \"MAX_BATCH_SIZE\": \"4\", # max batch size for the model\n",
     "    \"MAX_INPUT_LENGTH\": \"4000\", # max length of input text\n",
     "    \"MAX_TOTAL_TOKENS\": \"4096\", # max length of generated text\n",
     "    \"MESSAGES_API_ENABLED\": \"true\", # Enable the messages API\n",
-    "    \"HF_TOKEN\": HfFolder.get_token(), # pass the huggingface token to access the base weights\n",
+    "    # \"HF_TOKEN\": HfFolder.get_token(), # pass the huggingface token to access the base weights\n",
     "}\n",
     "\n",
     "\n",
@@ -230,17 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---------------------------------------------------------------------------------------!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Deploy model to an endpoint\n",
     "# https://sagemaker.readthedocs.io/en/stable/api/inference/model.html#sagemaker.model.Model.deploy\n",
@@ -259,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 20-30 minutes, we are working on improving the deployment time."
+    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 10-15 minutes, we are working on improving the deployment time."
    ]
   },
   {
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,23 +306,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deep learning is a type of machine learning, which is a way for computers to learn things without being specifically programmed to do so. In deep learning, the computer learns by analyzing a lot of data and finding patterns in it. It does this using artificial neural networks, which are modeled after the way that the human brain works. These neural networks have many layers, which is why it's called \"deep\" learning.\n",
-      "\n",
-      "To understand deep learning, imagine you're trying to teach a computer to recognize pictures of cats. You would start by showing it lots and lots of pictures, some of cats and some of other things. The computer would look at the pictures and try to find patterns that can help it distinguish cats from other things. For example, it might learn that cats have pointy ears and whiskers, or that they often have a certain shape.\n",
-      "\n",
-      "As the computer analyzes more and more pictures, it gets better and better at recognizing cats. This is because it's learning from experience, just like a human would. And just like a human, the more experience it has, the better it gets.\n",
-      "\n",
-      "Deep learning is used in many different applications, including image and speech recognition, natural language processing, and self-driving cars. It's a powerful tool that's helping us build smarter, more intelligent machines.</s>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat = llm.predict({\"messages\" :messages, **parameters})\n",
     "\n",
@@ -399,9 +377,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can run the benchmark with the following command. We are going to benchmark using `25` concurrent users and max `500` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
+    "Now we can run the benchmark with the following command. We are going to benchmark using `5` concurrent users and max `100` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
     "\n",
-    "_🚨Important🚨: This benchmark was initiatied from Europe, while the endpoint runs in us-east-1. This has significant impact on the `first-time-to-token` metric, since it includes the network communication. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
+    "_🚨Important🚨: This benchmark was initiatied on a instance in us-east-1. Network communication thorugh the internet can have impact on the `first-time-to-token` metric. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
    ]
   },
   {
@@ -414,9 +392,9 @@
     "!MESSAGES_API=true python llmperf/token_benchmark_ray.py \\\n",
     "--model {llm.endpoint_name} \\\n",
     "--llm-api \"sagemaker\" \\\n",
-    "--max-num-completed-requests 500 \\\n",
+    "--max-num-completed-requests 100 \\\n",
     "--timeout 600 \\\n",
-    "--num-concurrent-requests 25 \\\n",
+    "--num-concurrent-requests 5 \\\n",
     "--results-dir \"results\""
    ]
   },
@@ -440,26 +418,39 @@
     "with open(glob.glob(f'results/*summary.json')[0], 'r') as file:\n",
     "    data = json.load(file)\n",
     "\n",
-    "print(\"Concurrent requests: 25\")\n",
-    "print(f\"Avg. Input token length: {data['mean_input_tokens']}\")\n",
-    "print(f\"Avg. Output token length: {data['mean_output_tokens']}\")\n",
-    "print(f\"Avg. First-Time-To-Token: {data['results_ttft_s_mean']*1000:.2f}ms\")\n",
+    "print(\"Concurrent requests: 50\")\n",
+    "print(f\"Avg. Input token length: {int(data['results_number_input_tokens_mean'])}\")\n",
+    "print(f\"Avg. Output token length: {int(data['results_number_output_tokens_mean'])}\")\n",
+    "print(f\"Avg. Time-to-first-Token: {data['results_ttft_s_mean']*1000:.2f}ms\")\n",
+    "print(f\"Avg. Inter-Token-Latency: {data['results_inter_token_latency_s_mean']*1000:.2f}ms/token\")\n",
     "print(f\"Avg. Thorughput: {data['results_mean_output_throughput_token_per_s']:.2f} tokens/sec\")\n",
-    "print(f\"Avg. Latency: {data['results_inter_token_latency_s_mean']*1000:.2f}ms/token\")"
+    "print(f\"Failed Requests: {data['results_number_errors']}\")\n",
+    "print(f\"Request per minute (RPM): {data['results_num_completed_requests_per_min']:.2f} req/min\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results with 250 token generation: \n",
-    "```bash\n",
-    "Mixtral 8x7B results on inf2.48xlarge:\n",
-    "Throughput: 42.23 tokens/s\n",
-    "Latency p(50): 88.80 ms/token\n",
-    "```\n",
+    "We ran the benchmark for different concurrent requests and got the following results:\n",
     "\n",
-    "Thats it! We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. The benchmark is not a full representation of the model performance, but it gives you a first good indication. If you plan to use the model in production, we recommend to run a longer and closer to your production benchmark, modify the number of replicas see ([Scale LLM Inference on Amazon SageMaker with Multi-Replica Endpoints](https://www.philschmid.de/sagemaker-multi-replicahttps://www.philschmid.de/sagemaker-multi-replica)) and most importantly test the model with your own data."
+    "Mixtral 8x7B results on inf2.48xlarge:\n",
+    "| Metric                          | 1             | 2              | 5              | 10            | 25             |\n",
+    "|---------------------------------|---------------|----------------|----------------|---------------|----------------|\n",
+    "| Avg. Input Token Length         | 568           | 559            | 562            | 538           | 561            |\n",
+    "| Avg. Output Token Length        | 676           | 668            | 676            | 658           | 667            |\n",
+    "| Avg. Time-to-First-Token (ms)   | 643.33        | 890.52         | 2435.47        | 5977.68       | 11051.98       |\n",
+    "| Avg. Inter-Token Latency (ms/token) | 6.45       | 7.44           | 10.67          | 17.97         | 34.05          |\n",
+    "| Avg. Throughput (tokens/sec)    | 136.06        | 193.89         | 288.00         | 337.28        | 354.68         |\n",
+    "| Requests per Minute (RPM)       | 12.07         | 17.41          | 25.54          | 30.72         | 31.87          |\n",
+    "\n",
+    "\n",
+    "\n",
+    "We achieved a throughput of `288.00 tokens/sec` with an average inter-token latency of `10.67ms/token` and a time-to-first-token of `2435.47ms` for Mixtral 8x7B on inf2.48xlarge with 5 concurrent requests. The fastest latency was `6.45ms/token` with a time-to-first-token of `643.33ms` at 1 concurrent request. \n",
+    "\n",
+    "While scaling the number of concurrent requests, we observed that throughput peaked before reaching 10 concurrent users, as the thorughput and number of requests not increased afterwards. We would need to increase the number of replicas or batch size to improve the throughput. Scaling beyond 50 concurrent users, will lead to timeouts on the SageMaker side since requests are processed for longer than 60s. The inf2.48xlarge instance costs $12.98/hour on-demand and $7.79/hour with a 1-year savings plan for EC2.\n",
+    "\n",
+    "This benchmark is a good start to understand the performance of Mixtral 8x7B, but if you plan to use the model in production, we recommend to run a longer, more optimal detailed benchmark. Using your own data and moving client and host into the correct infrastructure setup. We successfully deployed, tested and benchmarked Mixtral 8x7B on AWS Inferentia2. 🎉 "
    ]
   },
   {
@@ -474,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
