--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -152,7 +152,7 @@
     "NUM_CORES = 24 # each inferentia chip has 2 cores, e.g. inf2.48xlarge has 12 chips or 24 cores\n",
     "PRECISION = \"fp16\"\n",
     "HF_MODEL_ID_TO_PUSH=\"aws-neuron/hermes-mixtral-instruct-seqlen-4096-bs-4-optimum-0-0-23\" # change this to your desired model id\n",
-    "HF_TOKEN = \"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\"\n",
+    "HF_TOKEN = \"YOUR_TOKEN\"\n",
     "\n",
     "# login into the huggingface hub to access gated models, like llama\n",
     "!huggingface-cli login --token $HF_TOKEN\n",
