--- a/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
+++ b/mixtral-8x7b/deploy-mixtral-8x7b-inferentia2.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "## 2. Retrieve the new Hugging Face LLM Inf2 DLC\n",
     "\n",
-    "The new Hugging Face TGI Neuronx DLCs can be used to run inference on AWS Inferentia2. You can use the `get_huggingface_llm_image_uri` method of the `sagemaker` SDK to retrieve the appropriate Hugging Face TGI Neuronx DLC URI based on your desired `backend`, `session`, `region`, and `version`. You can find all the available versions [here](https://github.com/aws/deep-learning-containers/releases?q=tgi+AND+neuronx&expanded=true).\n",
+    "The new Hugging Face TGI Neuronx DLCs can be used to run inference on AWS Inferentia2. You can use the `get_huggingface_llm_image_uri` method of the `sagemaker` SDK to retrieve the appropriate Hugging Face TGI Neuronx DLC URI based on your desired `backend`, `session`, `region`, and `version`. You can find all the available versions [here](https://github.com/aws/deep-learning-containers/releases?q=tgi+AND+neuronx&expanded=true).\n"
    ]
   },
   {
